AC_INIT(src/main.c, 0.40.5)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME,AC_PACKAGE_VERSION)
AM_MAINTAINER_MODE

GETTEXT_PACKAGE=oregano
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)


SCROLLKEEPER_REQUIRED=0.1.4

AC_ISC_POSIX
AC_PROG_CC
AC_HEADER_STDC
AC_ARG_PROGRAM

AC_PROG_INTLTOOL([0.31])

AM_PROG_LIBTOOL

ALL_LINGUAS="ca de es fr it ja pt_BR ro ru sv"
AM_GLIB_GNU_GETTEXT

if test "x$prefix" = "xNONE"; then
  GNOMELOCALEDIR=$ac_default_prefix/share/locale
else
  GNOMELOCALEDIR=$prefix/share/locale
fi
AC_DEFINE_UNQUOTED(GNOMELOCALEDIR, "$GNOMELOCALEDIR")

dnl ###########################################################################
dnl Check for documentation requirements
dnl ###########################################################################
AC_SUBST(SCROLLKEEPER_REQUIRED)
AC_PATH_PROG(SCROLLKEEPER_CONFIG, scrollkeeper-config,no)
if test x$SCROLLKEEPER_CONFIG = xno; then
	AC_MSG_ERROR(Couldn't find scrollkeeper-config, please install the scrollkeeper package)
fi


# Change to support gnomeprint2.0 and 2.2
PKG_CHECK_MODULES(OREGANO,
	libglade-2.0 >= 1.99.4 \
	libgnomeui-2.0 >= 1.107.0 \
	libgnomeprint-2.2 >= 1.106.0 \
	libxml-2.0 >= 0.14.0 \
	libgnomecanvas-2.0 >= 2.2 \
	gtksourceview-1.0 >= 1.0 \
	cairo >= 0.5.0 \
	libgnomeprintui-2.2 >= 1.106.0)


# Taken from Screem HTML editor configure.in
AC_ARG_ENABLE(update_mime,
	AC_HELP_STRING([--disable-update-mime Do not run update-mime-database when installing]), UPDATE_MIME=$enableval,UPDATE_MIME=yes)
	AM_CONDITIONAL(UPDATE_MIME, test x"$UPDATE_MIME" = x"yes")

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(OREGANO_LIBS)
AC_SUBST(OREGANO_CFLAGS)

AC_OUTPUT([
Makefile
oregano.spec
src/Makefile
src/dialogs/Makefile
src/samples/Makefile
src/stock/Makefile
src/pixmaps/Makefile
src/model/Makefile
src/sheet/Makefile
src/gtkcairoplot/Makefile
po/Makefile.in
help/Makefile
help/C/Makefile
help/es/Makefile
help/fr/Makefile
data/Makefile
data/models/Makefile
data/libraries/Makefile
docs/Makefile
stamp.h
])

echo "

Configuration:
	Source code location:			 ${srcdir}
	Compiler:				 ${CC}

	Install location:			 ${prefix}

Type make to build Oregano."
