gladedir   = $(datadir)/oregano/dialogs

glade_DATA = 			\
	clamp-properties-dialog.glade2 \
	export.glade2		\
	log-window.glade2	\
	part-browser.glade2	\
	part-properties-dialog.glade2 \
	plot-add-function.glade2 \
	plot-window.glade2	\
	print-options.glade2	\
	properties.glade2 	\
	settings.glade2		\
	sim-settings.glade2	\
	simulation.glade2	\
	splash.glade2 		\
	splash.xpm 		\
	textbox-properties-dialog.glade2 \
	view-netlist.glade2

EXTRA_DIST = $(glade_DATA)

