samplesdir   = $(datadir)/oregano/samples

samples_DATA =			\
	12ax7a.oregano		\
	741.oregano		\
	opamp.oregano		\
	zener.oregano		\
	OP177B.oregano		\
	capacitor.oregano 	\
	opamp_ideal.oregano 	\
	opamp.oregano 		\
	high_pass.oregano 	\
	simple2.oregano 	\
	simple.oregano 		\
	transistors.oregano

EXTRA_DIST = $(samples_DATA)12ax7a.oregano
