gladedir   = $(datadir)/oregano/glade

glade_DATA = 			\
	clamp-properties-dialog.glade \
	export.glade		\
	log-window.glade	\
	part-browser.glade	\
	part-properties-dialog.glade \
	plot-add-function.glade \
	plot-window.glade	\
	print-options.glade	\
	properties.glade 	\
	settings.glade		\
	sim-settings.glade	\
	simulation.glade	\
	splash.glade 		\
	splash.xpm 		\
	textbox-properties-dialog.glade \
	view-netlist.glade

EXTRA_DIST = $(glade_DATA)

