oreganolibdir = $(datadir)/oregano/libraries

oreganolib_DATA = 			\
	cmos.oreglib		\
	cpu.oreglib         	\
	linear.oreglib         	\
	opamplib.oreglib    	\
	ttl.oreglib		\
	default.oreglib     	\
	memory.oreglib         	\
	miscellaneous.oreglib  	\
	power.oreglib		\
	peripheral.oreglib	\
	source-input.oreglib	\
	ground.oreglib		\
	passive-components.oreglib		\
	interface.oreglib

EXTRA_DIST = $(oreganolib_DATA)

