xmldir   = $(datadir)/oregano/xml

xml_DATA = 			\
	clamp-properties-dialog.ui	\
	export.ui			\
	log-window.ui			\
	oregano-main.ui			\
	part-properties-dialog.ui	\
	plot-add-function.ui		\
	print-options.ui		\
	splash.ui			\
	splash.xpm			\
	part-browser.ui			\
	plot-window.ui			\
	properties.ui			\
	settings.ui			\
	sim-settings.ui			\
	simulation.ui			\
	textbox-properties-dialog.ui	\
	view-netlist.ui
#page-properties.ui

EXTRA_DIST = $(xml_DATA)

