gladedir   = $(datadir)/oregano/glade

glade_DATA = 			\
	part-browser.glade2 	\
	settings.glade2		\
	sim-settings.glade2	\
	part-properties-dialog.glade2 \
	clamp-properties-dialog.glade2 \
	textbox-properties-dialog.glade2 \
	plot-window.glade2	\
	log-window.glade2	\
	simulation.glade2	\
	properties.glade2 \
	page-properties.glade2 \
	view-netlist.glade2 \
	splash.glade2 \
	splash.xpm \
	plot-export.glade2

EXTRA_DIST = $(glade_DATA)

