samplesdir   = $(datadir)/oregano/samples

samples_DATA =			\
	12ax7a.oregano		\
	741.oregano		\
	opamp.oregano		\
	zener.oregano		\
	555.oregano 		\
	OP177B.oregano		\
	carga_capacitor.oregano \
	opamp_ideal.oregano \
	opamp.oregano \
	pasa_altos.oregano \
	simple2.oregano \
	simple.oregano \
	transistors.oregano

EXTRA_DIST = $(samples_DATA)12ax7a.oregano
